# auditstratifiedp

./: README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: deploy-streamlit.yml  python-tests.yml
auditstratified/: __init__.py  analyseer_klimheuristiek.py  eval_stratified.py  plan_stratified.py  plot_kanskromme.py  utils.py
auditstratified.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_eval.py  test_klimheuristiek.py  test_plan.py  test_utils.py
tests/__pycache__/: unit_tests_voor_convolutie.py
